--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,8 @@
     "url": "https://github.com/elieandraos/create-nodejs-package/issues"
   },
   "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "jest": "^27.2.5"
+  }
 }
