--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
-    "test": "jest --verbose --coverage"
+    "test": "jest --verbose --coverage",
+    "lint": "npx eslint bin --fix"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
   "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
   "dependencies": {},
   "devDependencies": {
+    "eslint": "^8.0.0",
     "jest": "^27.2.5"
   }
 }
