--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "@elieandraos/create-nodejs-package",
-  "version": "0.0.0",
-  "description": "A cli tool that scaffolds and configures everything you need to develop nodeJs packages and publish them to NPM registry",
-  "keywords": [
-    "cli",
-    "javascript package",
-    "skeleton",
-    "scaffold",
-    "generate",
-    "automate release",
-    "create node js package"
-  ],
-  "engines": {
-    "node": ">=12.0.0"
-  },
-  "bin": {
-    "@elieandraos/create-nodejs-package": "bin/cli.js",
-    "create-nodejs-package": "bin/cli.js"
-  },
-  "scripts": {
-    "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
-    "test": "jest --verbose --coverage",
-    "lint": "npx eslint bin --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/elieandraos/create-nodejs-package.git"
-  },
-  "author": "Elie Andraos <elieandraos31@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/elieandraos/create-nodejs-package/issues"
-  },
-  "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "eslint": "^8.0.0",
-    "jest": "^27.2.5"
-  }
+    "name": "@elieandraos/create-nodejs-package",
+    "version": "0.0.0",
+    "description": "A cli tool that scaffolds and configures everything you need to develop nodeJs packages and publish them to NPM registry",
+    "keywords": [
+        "cli",
+        "javascript package",
+        "skeleton",
+        "scaffold",
+        "generate",
+        "automate release",
+        "create node js package"
+    ],
+    "engines": {
+        "node": ">=12.0.0"
+    },
+    "bin": {
+        "@elieandraos/create-nodejs-package": "bin/cli.js",
+        "create-nodejs-package": "bin/cli.js"
+    },
+    "scripts": {
+        "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
+        "test": "jest --verbose --coverage",
+        "lint": "npx eslint bin --fix",
+        "format": "npx prettier --write ."
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/elieandraos/create-nodejs-package.git"
+    },
+    "author": "Elie Andraos <elieandraos31@gmail.com>",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/elieandraos/create-nodejs-package/issues"
+    },
+    "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
+    "dependencies": {},
+    "devDependencies": {
+        "eslint": "^8.0.0",
+        "jest": "^27.2.5",
+        "prettier": "2.4.1"
+    }
 }
