--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
         "node": ">=12.0.0"
     },
     "bin": {
-        "@elieandraos/create-nodejs-package": "bin/cli.js",
-        "create-nodejs-package": "bin/cli.js"
+        "@elieandraos/create-nodejs-package": "src/bin/cli.js",
+        "create-nodejs-package": "src/bin/cli.js"
     },
     "scripts": {
         "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
         "test": "jest --verbose --coverage",
-        "lint": "npx eslint bin --fix",
+        "lint": "npx eslint src --fix",
         "format": "npx prettier --write ."
     },
     "repository": {
@@ -38,7 +38,7 @@
         "dotenv": "^10.0.0"
     },
     "devDependencies": {
-        "eslint": "^8.0.0",
+        "eslint": "^8.0.1",
         "jest": "^27.2.5",
         "prettier": "2.4.1"
     }
