--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "node": ">=12.0.0"
     },
     "bin": {
-        "@elieandraos/create-nodejs-package": "src/bin/cli.js",
-        "create-nodejs-package": "src/bin/cli.js"
+        "@elieandraos/create-nodejs-package": "bin/create-nodejs-package.js",
+        "create-nodejs-package": "bin/create-nodejs-package.js"
     },
     "scripts": {
         "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
@@ -35,7 +35,9 @@
     },
     "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
     "dependencies": {
-        "dotenv": "^10.0.0"
+        "dotenv": "^10.0.0",
+        "esm": "^3.2.25",
+        "inquirer": "^8.2.0"
     },
     "devDependencies": {
         "eslint": "^8.0.1",
