--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
     "dependencies": {
+        "chalk": "^4.1.2",
         "dotenv": "^10.0.0",
         "esm": "^3.2.25",
         "inquirer": "^8.2.0"
