--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "chalk": "^4.1.2",
         "dotenv": "^10.0.0",
         "esm": "^3.2.25",
-        "inquirer": "^8.2.0"
+        "inquirer": "^8.2.0",
+        "pkg-install": "^1.0.0"
     },
     "devDependencies": {
         "eslint": "^8.0.1",
