--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     },
     "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
     "dependencies": {
+        "@octokit/core": "^3.5.1",
         "chalk": "^4.1.2",
+        "changelog-parser": "^2.8.0",
         "dotenv": "^10.0.0",
         "esm": "^3.2.25",
         "inquirer": "^8.2.0",
-        "pkg-install": "^1.0.0"
+        "pkg-install": "^1.0.0",
+        "shelljs": "^0.8.4"
     },
     "devDependencies": {
         "eslint": "^8.0.1",
