--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
         "changelog-parser": "^2.8.0",
         "dotenv": "^10.0.0",
         "esm": "^3.2.25",
+        "execa": "^5.1.1",
         "inquirer": "^8.2.0",
-        "pkg-install": "^1.0.0",
-        "shelljs": "^0.8.4"
+        "pkg-install": "^1.0.0"
     },
     "devDependencies": {
         "eslint": "^8.0.1",
