--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -11,16 +11,23 @@
         "build": "microbundle",
         "test": "jest --verbose --coverage",
         "lint": "npx eslint src --fix",
-        "format": "npx prettier --write ."
+        "format": "npx prettier --write .",
+        "release": "node -r esm src/release.js"
     },
     "license": "ISC",
     "dependencies": {
         "dotenv": "^10.0.0"
     },
     "devDependencies": {
-        "microbundle": "^0.13.3",
-        "eslint": "^8.0.1",
-        "jest": "^27.2.5",
-        "prettier": "2.4.1"
+        "microbundle": "^0.14.1",
+        "eslint": "^8.1.0",
+        "jest": "^27.3.1",
+        "prettier": "2.4.1",
+        "@octokit/core": "^3.5.1",
+        "chalk": "^4.1.2",
+        "changelog-parser": "^2.8.0",
+        "esm": "^3.2.25",
+        "execa": "^5.1.1",
+        "inquirer": "^8.2.0"
     }
 }
