--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nodejs-package",
+    "name": "test",
     "version": "0.0.0",
     "source": "src/index.js",
     "main": "dist/index.js",
