--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -1,33 +1,28 @@
 {
-    "name": "test",
+    "name": "create-nodejs-package",
     "version": "0.0.0",
     "source": "src/index.js",
     "main": "dist/index.js",
-    "module": "dist/index.module.js",
-    "umd:main": "dist/index.umd.js",
-    "unpkg": "dist/index.modern.js",
     "scripts": {
         "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
-        "build": "microbundle",
+        "build": "node scripts/build.js",
         "test": "jest --verbose --coverage",
         "lint": "npx eslint src --fix",
         "format": "npx prettier --write .",
-        "release": "node -r esm src/release.js"
+        "release": "node -r esm scripts/release.js"
     },
     "license": "ISC",
     "dependencies": {
+        "@elieandraos/cli-tools": "^0.0.4",
+        "chalk": "^4.1.2",
         "dotenv": "^10.0.0"
     },
     "devDependencies": {
-        "microbundle": "^0.14.1",
-        "eslint": "^8.1.0",
-        "jest": "^27.3.1",
-        "prettier": "2.4.1",
-        "@octokit/core": "^3.5.1",
-        "chalk": "^4.1.2",
-        "changelog-parser": "^2.8.0",
+        "esbuild": "^0.14.5",
+        "esbuild-node-externals": "^1.4.1",
+        "eslint": "^8.0.1",
         "esm": "^3.2.25",
-        "execa": "^5.1.1",
-        "inquirer": "^8.2.0"
+        "jest": "^27.2.5",
+        "prettier": "2.4.1"
     }
 }
