--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     },
     "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
     "dependencies": {
-        "@elieandraos/cli-tools": "^0.0.5",
+        "@elieandraos/cli-tools": "^0.0.7",
         "@octokit/core": "^3.5.1",
         "chalk": "^4.1.2",
         "changelog-parser": "^2.8.0",
@@ -49,6 +49,6 @@
     "devDependencies": {
         "eslint": "^8.1.0",
         "jest": "^27.3.1",
-        "prettier": "2.4.1"
+        "prettier": "^2.5.1"
     }
 }
