--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -12,12 +12,10 @@
         "release": "node -r esm scripts/release.js"
     },
     "license": "ISC",
-    "dependencies": {
+    "dependencies": {},
+    "devDependencies": {
         "@elieandraos/cli-tools": "^0.0.7",
         "chalk": "^4.1.2",
-        "dotenv": "^10.0.0"
-    },
-    "devDependencies": {
         "esbuild": "^0.14.5",
         "esbuild-node-externals": "^1.4.1",
         "eslint": "^8.0.1",
