--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     },
     "homepage": "https://github.com/elieandraos/create-nodejs-package#readme",
     "dependencies": {
-        "@elieandraos/cli-tools": "^0.0.7",
+        "@elieandraos/cli-tools": "*",
         "@octokit/core": "^3.5.1",
         "chalk": "^4.1.2",
         "changelog-parser": "^2.8.0",
-        "dotenv": "^10.0.0",
+        "dotenv": "^16.0.0",
         "esm": "^3.2.25",
         "execa": "^5.1.1",
         "inquirer": "^8.2.0",
