--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -14,13 +14,14 @@
     "license": "ISC",
     "dependencies": {},
     "devDependencies": {
-        "@elieandraos/cli-tools": "^0.0.7",
+        "@babel/preset-env": "^7.16.5",
+        "@elieandraos/cli-tools": "*",
         "chalk": "^4.1.2",
-        "esbuild": "^0.14.5",
+        "esbuild": "^0.14.27",
         "esbuild-node-externals": "^1.4.1",
-        "eslint": "^8.0.1",
+        "eslint": "^8.4.1",
         "esm": "^3.2.25",
-        "jest": "^27.2.5",
+        "jest": "^27.3.1",
         "prettier": "^2.5.1"
     }
 }
