--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -2,7 +2,8 @@
     "name": "create-nodejs-package",
     "version": "0.0.0",
     "source": "src/index.js",
-    "main": "dist/index.js",
+    "main": "dist/index.cjs.js",
+    "module": "dist/index.esm.js",
     "scripts": {
         "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
         "build": "rm -rf dist && node scripts/build.js",
