--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -4,6 +4,7 @@
     "source": "src/index.js",
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
+    "unpkg": "dist/index.esm.js",
     "scripts": {
         "info": "npm list -depth 0 && npm list -g --depth=0 && npm outdated || exit 0",
         "build": "rm -rf dist && node scripts/build.js",
