:green_heart: add cjs format to build script

--- a/src/templates/vanilla/package.json
+++ b/src/templates/vanilla/package.json
@@ -14,7 +14,9 @@
         "release": "node -r esm scripts/release.js"
     },
     "license": "ISC",
-    "dependencies": {},
+    "dependencies": {
+
+    },
     "devDependencies": {
         "@babel/preset-env": "^7.16.5",
         "@elieandraos/cli-tools": "*",
